[Improvement/255] Adds an exception filter for all routes (#7)
* Adds an exception filter for all routes

* Fix lint

* Update custom error name

* Clean up the response throwing logic
